# textuv

./: .gitignore  README.md  main.py  pyproject.toml
src/textuv/: cli.py
