[project]
name = "textuv"
version = "0.1.2"
description = "CLI to scaffold a Textual + uv application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.9.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

authors = [{ name = "yosui", email = "yosui262@gmail.com" }]

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://github.com/yourname/textuv"
Repository = "https://github.com/yourname/textuv"
Issues = "https://github.com/yourname/textuv/issues"
 

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
]

[project.scripts]
textuv = "textuv.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[tool.black]
line-length = 100

[tool.hatch.build.targets.sdist]
exclude = [
    ".env",
    ".env.*",
]
